Додавання анімацій і модального вікна

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,12 +75,17 @@
           <ul class="list portfolio">
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
+                <div class="card">
+                  <img
                   src="./images/img-1.jpg"
                   alt="Ноутбук с командой"
                   width="370"
                   height="294"
-                />
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                </div>
                 <div class="border-box">
                   <h2 class="title">Технокряк</h2>
                   <p>Веб-сайт</p>
@@ -89,12 +94,17 @@
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-2.jpg"
-                  alt="Два баскетболиста с мячём"
-                  width="370"
-                  height="294"
-                />
+                <div class="card">
+                  <img
+                    src="./images/img-2.jpg"
+                    alt="Два баскетболиста с мячём"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                </div>
                 <div class="border-box">
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
                   <p>Дизайн</p>
@@ -103,100 +113,135 @@
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-3.jpg"
-                  alt="Логотип рыбного ресторана"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Ресторан Seafood</h2>
-                  <p>Приложение</p>
+                <div class="card">
+                  <img
+                    src="./images/img-3.jpg"
+                    alt="Логотип рыбного ресторана"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
                 </div>
+                  <div class="border-box">
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                  </div>
               </a>
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-4.jpg"
-                  alt="Наушники"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Проект Prime</h2>
-                  <p>Маркетинг</p>
-                </div>
+                <div class="card">
+                  <img
+                    src="./images/img-4.jpg"
+                    alt="Наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="border-box">
+                    <h2 class="title">Проект Prime</h2>
+                    <p>Маркетинг</p>
+                  </div>
               </a>
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-5.jpg"
-                  alt="Две коробки"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Проект Boxes</h2>
-                  <p>Приложение</p>
-                </div>
+                <div class="card">
+                  <img
+                    src="./images/img-5.jpg"
+                    alt="Две коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="border-box">
+                    <h2 class="title">Проект Boxes</h2>
+                    <p>Приложение</p>
+                  </div>
               </a>
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-6.jpg"
-                  alt="Монитор с веб-сайтом"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Inspiration has no Borders</h2>
-                  <p>Веб-сайт</p>
-                </div>
+                  <div class="card">
+                  <img
+                    src="./images/img-6.jpg"
+                    alt="Монитор с веб-сайтом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="border-box">
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                  </div>
               </a>
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-7.jpg"
-                  alt="Развернутый журнал"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Издание Limited Edition</h2>
-                  <p>Дизайн</p>
-                </div>
+                <div class="card">
+                  <img
+                    src="./images/img-7.jpg"
+                    alt="Развернутый журнал"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="border-box">
+                    <h2 class="title">Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                  </div>
               </a>
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-8.jpg"
-                  alt="Белая лейба"
-                  width="364"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Проект LAB</h2>
-                  <p>Маркетинг</p>
-                </div>
+                <div class="card">
+                  <img
+                    src="./images/img-8.jpg"
+                    alt="Белая лейба"
+                    width="364"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="border-box">
+                    <h2 class="title">Проект LAB</h2>
+                    <p>Маркетинг</p>
+                  </div>
               </a>
             </li>
             <li class="portfolio-list">
               <a class="portfolio-list-box">
-                <img
-                  src="./images/img-9.jpg"
-                  alt="Ноутбук с приложением"
-                  width="364"
-                  height="294"
-                />
-                <div class="border-box">
-                  <h2 class="title">Growing Business</h2>
-                  <p>Приложение</p>
-                </div>
+                <div class="card">
+                  <img
+                    src="./images/img-9.jpg"
+                    alt="Ноутбук с приложением"
+                    width="364"
+                    height="294"
+                  />
+                  <div class="portfolio-list-description">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="border-box">
+                    <h2 class="title">Growing Business</h2>
+                    <p>Приложение</p>
+                  </div>
               </a>
             </li>
           </ul>
