--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="background">
           <div class="container">
             <h1>Эффективные решения<br />для вашего бизнеса</h1>
-            <button class="order" type="button">Заказать услугу</button>
+            <button data-modal-open class="order" type="button">Заказать услугу</button>
           </div>
         </div>
       </section>
@@ -126,6 +126,9 @@
                 alt="Работа на клавиатуре"
                 width="370"
               />
+              <div class="desckription">
+                <p>Десктопные приложения</p>
+              </div>
             </li>
             <li class="title-list">
               <img
@@ -133,6 +136,9 @@
                 alt="Работа со смартфоном"
                 width="370"
               />
+              <div class="desckription">
+                <p>Мобильные приложения</p>
+              </div>
             </li>
             <li class="title-list">
               <img
@@ -140,6 +146,9 @@
                 alt="Работа на планшете"
                 width="370"
               />
+              <div class="desckription">
+                <p>Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -360,6 +369,15 @@
           </ul>
         </div>
       </section>
+      <div data-modal class="backdrop is-hidden">
+        <div class="modal">
+          <button data-modal-close class="button-close">
+          <svg class="icon-close" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+          </button>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="container footer">
@@ -412,5 +430,6 @@
         </div>
       </div>
     </footer>
+    <script src="./modal.js"></script>
   </body>
 </html>
